--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@
 import MainLayout from '../layouts/MainLayout.astro'
 ---
 
-<MainLayout title='Index' description='My home page'>
+<MainLayout title='Vinoo' description='A site built with Astro framework'>
   <p>This is my home page</p>
 </MainLayout>
