--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,11 +1,10 @@
 ---
-import { Icon } from 'astro-icon'
 ---
 
 <nav aria-label='Primary'>
   <div class='navbar'>
     <a href='/' aria-label='Go home' class='logo'>
-      <img src='/public/img/logo.png' class='logo-img' alt='' />
+      <h1 class='text-3xl font-bold hover:underline'>vinoo.</h1>
     </a>
     <ul></ul>
   </div>
