play around with styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<footer>
+<footer aria-label="footer" class="text-center py-3 bg-slate-300">
   <small>
     Copyright &copy; <span id='copyright'></span>
     | All rights reserved
